# cpp_template

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cpp_template/: CMakeLists.txt  cpp_template.cpp  cpp_template.hpp  main.cpp  main.hpp
demo/: CMakeLists.txt  demo.cpp
tests/: CMakeLists.txt  tests.cpp
